--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="AE.Ingredior.Launcher.MainWindow"
+﻿<Window x:Class="ZeroElectric.Fenestra.Launcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       
-        xmlns:local="clr-namespace:AE.Ingredior.Launcher"
+        xmlns:local="clr-namespace:ZeroElectric.Fenestra.Launcher"
     
         mc:Ignorable="d"
         
